# squad_roulette

./: .gitignore  Cargo.toml  README.md
src/: main.rs
