[package]
name = "squad_roulette"
version = "1.0.0"
authors = "69Lukash"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29" 
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8" 
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0"
rodio = "0.17"